# cw

./: .gitignore  BENCH.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Stats.txt  build.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/desing/: Automata.drawio
.github/workflows/: bench.yaml  build.yaml  build_linux.yaml  build_macos_aarch64.yaml  build_macos_x64.yaml  build_windows.yaml  ci.yaml  perf.yaml  release.yaml  test.yaml
bench/: bench.sh  cpuinfo.txt  stats.txt  version.txt
crates/cw/: Cargo.toml  build.rs
crates/cw/resources/: cmdline-clap.yaml
crates/cw/src/: config.rs  eater.rs  main.rs  run.rs  statefull_counter.rs  stats.rs  util.rs
crates/cw/src/commandline/: exec_jobs.rs  util.rs
crates/cw/src/message_writer/: default.rs  json.rs  mod.rs
crates/cw/src/print/: json.rs  mod.rs  stdout.rs
crates/cw/src/run/: files.rs  mod.rs  stdin.rs  stdio.rs
crates/libcw/: Cargo.toml  README.md  build.rs  libcw.h
crates/libcw/benches/: parser.rs
crates/libcw/examples/: async_count_from_file.rs  count_from_file.rs
crates/libcw/examples/ABI/: .gitignore  README.md  example.txt  makefile
crates/libcw/examples/ABI/src/: test.c
crates/libcw/resources/utf16/: Gabriel.txt  sample2.txt  weird.txt
crates/libcw/resources/utf16/utf16le/: sample1.txt
crates/libcw/resources/utf16be/: french.txt  sample1.txt  spanish.txt
crates/libcw/resources/utf16le/: Lorem_big.txt  small.txt
crates/libcw/src/: c.rs  lib.rs  parser.rs  stats.rs
crates/libcw/src/config/: encoding.rs  line_break.rs  mod.rs
crates/libcw/src/counter/: mod.rs  service.rs  word.rs
crates/libcw/src/counter/byte/: mod.rs  service.rs
crates/libcw/src/counter/char/: mod.rs  service.rs
crates/libcw/src/counter/line/: mod.rs  service.rs
crates/libcw/src/counter/word/: mod.rs  service.rs
crates/libcw/src/parser/: features_none.rs  tokio.rs
crates/libcw/src/state/: bytes.rs  bytes_state.rs  chars.rs  chars_state.rs  lines.rs  lines_state.rs  max_length.rs  mod.rs  words.rs  words_state.rs
crates/libcw/src/state/traits/: compute.rs  partial_state.rs
crates/libcw/src/tokio/: parser.rs
crates/libcw/src/traits/: compute.rs
crates/libcw/tests/: parser_test.rs  utf16_le_test.rs  utf16_test.rs  utf16be.rs  utf16le.rs  utf8.rs  utf8_test.rs
crates/libcw/tests/utf16le/: sample3.txt  spanish.txt
resources/: cmdline-clap.yaml  stdin_list.txt
resources/utf16/: Lorem_big.txt  arabic.txt  sample3.txt  small.txt
resources/utf16/utf16le/: Gabriel.txt  french.txt  sample2.txt  weird.txt
resources/utf8/: Gabriel.txt
src/: lib.rs  main.rs
src/commandline/: arguments.rs  exec_jobs.rs  mod.rs  mode.rs  pretty_print.rs  util.rs  utilities.rs
src/cw/: mod.rs  parser.rs  stats.rs
src/cw/automaton/: automaton_utf8.rs  trait_automaton.rs  trait_partial_state.rs
src/cw/parser_config/: encoding.rs  line_break.rs
src/cw_lib/: mod.rs  parser.rs  stats.rs
src/cw_lib/automaton/: automaton_utf8.rs  mod.rs  trait_automaton.rs  trait_partial_state.rs
src/cw_lib/config/: encoding.rs  line_break.rs  mod.rs
src/cw_lib/func/: bytes_state.rs  chars_state.rs  lines_state.rs  max_length.rs  mod.rs  traits.rs  words_state.rs
src/cw_lib/parser_config/: encoding.rs  line_break.rs
src/cw_lib/state/: bytes_state.rs  chars_state.rs  lines_state.rs  max_length.rs  mod.rs  traits.rs  words_state.rs
src/cw_lib/state/traits/: compute.rs  partial_state.rs
src/libcw/: parser.rs
src/libcw/config/: encoding.rs  line_break.rs  mod.rs
src/libcw/state/: bytes_state.rs  chars_state.rs  lines_state.rs  max_length.rs  mod.rs  words_state.rs
src/libcw/state/traits/: mod.rs
src/stats/: analizer.rs  automata.rs  mod.rs  mode.rs  parser.rs  stats.rs
src/stats/automata/: automata.rs  automata_config.rs  automata_trait.rs  automata_utf8.rs  encoding.rs  file_style.rs  line_break.rs  mod.rs  mode.rs  parser_config.rs  partial_response.rs  posix.rs  posix_ascii.rs  posix_utf8.rs  response.rs  trait_automata.rs  trait_partial_state.rs
src/stats/automata/ascii/: mod.rs  posix_ascii.rs
src/stats/automata/utf8/: mod.rs  posix_utf8.rs
src/stats/automaton/: automaton_utf8.rs  mod.rs  trait_automaton.rs  trait_partial_state.rs
src/stats/parser_config/: encoding.rs  line_break.rs  mod.rs
tests/: automata_test.rs  parser_test.rs  posix_ascii_test.rs  posix_utf8_test.rs
tests/resources/: A wonderful serenity has taken possessio.rtf  Li Europan lingues es membres del sam fa.rtf  Lorem ipsum dolor sit amet, consectetur .rtf  One morning, when Gregor Samsa woke from.rtf  Sed ut perspiciatis unde omnis iste natu.rtf  abc def ghi jkl mno pqrs tuv wxyz ABC DE copia.rtf  abc def ghi jkl mno pqrs tuv wxyz ABC DE.rtf  chinese.txt  chinese_small.txt
