[package]
name = "cw"
version = "0.1.0"
edition = "2018"

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0-beta.2", features = ["yaml"]}
threads_pool = "^0.2.0"
colored = "2.0.0"
regex = "1.5.4"
lazy_static = "1.4.0"