[package]
name = "cw"
version = "0.1.0"
authors = ["Altair Bueno"]
edition = "2018"
license = "MIT"
description = "A rip off wc. Lines, words, character and byte count with column stats"
readme = "README.md"
repository = "https://github.com/Altair-Bueno/cw"
keywords = ["wc","cw","word","line","character","UTF8","UTF16","count"]
categories = ["command-line-utilities","filesystem","text-processing"]

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0-beta.2", features = ["yaml"]}
threads_pool = "^0.2.0"
colored = "2.0.0"