[package]
name = "cw"
version = "3.0.0"
authors = ["Altair Bueno"]
edition = "2021"
license = "MIT"
description = "A rip off wc. Lines, words, character and byte count with column stats"
readme = "../../README.md"
repository = "https://github.com/Altair-Bueno/cw"
keywords = ["wc", "cw", "word", "line", "character", "UTF8", "UTF16", "count"]
categories = ["command-line-utilities", "filesystem", "text-processing"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"

[dependencies.mimalloc]
version = "0.1.26"
default-features=false
optional = true

[dependencies.tokio]
version = "1.11.0"
features = [
  "rt",
  "rt-multi-thread",
  "io-util",
  "io-std",
  "macros",
  "fs"
]

[dependencies.tokio-stream]
version = "0.1.7"
features = ["io-util"]

[dependencies.libcw]
path = "../libcw"
features = ["tokio"]

[dependencies.clap]
version = "2.33.3"
default-features = false
features = ["yaml", "color", "vec_map", "wrap_help"]

[build-dependencies.clap]
version = "2.33.3"
default-features = false
features = ["yaml", "color", "vec_map", "wrap_help"]