[package]
name = "cw"
version = "3.3.0"
authors = ["Altair Bueno <https://github.com/Altair-Bueno>"]
edition = "2021"
license = "MIT"
description = "A rip off wc. Lines, words, character and byte count with column stats"
readme = "../../README.md"
repository = "https://github.com/Altair-Bueno/cw"
keywords = ["wc", "cw", "word", "line", "character", "UTF8", "UTF16", "count"]
categories = ["command-line-utilities", "filesystem", "text-processing"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
async-trait = "0.1.53"
serde_json = "1.0.79"

[dependencies.mimalloc]
version = "0.1.28"
default-features=false
optional = true

[dependencies.tokio]
version = "1.17.0"
features = [
  "rt",
  "rt-multi-thread",
  "io-util",
  "io-std",
  "macros",
  "fs"
]

[dependencies.tokio-stream]
version = "0.1.8"
features = ["io-util"]

[dependencies.libcw]
path = "../libcw"
features = ["tokio","serde"]

[dependencies.clap]
version = "3.1.0"
default-features = false
features = [
  "std",
  "color",
  "suggestions",
  "derive",
  "wrap_help"
]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[build-dependencies.clap_complete]
version = "3.1.0"

[build-dependencies.libcw]
path = "../libcw"
features = ["tokio"]

[build-dependencies.clap]
version = "3.1.0"
default-features = false
features = [
  "std",
  "color",
  "suggestions",
  "derive",
  "wrap_help"
]