[package]
name = "libcw"
version = "3.2.0"
authors = ["Altair Bueno"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "cw core library for fast and reliable count"
repository = "https://github.com/Altair-Bueno/cw"
keywords = ["wc", "cw", "word", "line", "character", "UTF8", "UTF16", "count"]
categories = ["filesystem", "text-processing"]
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=[]
sync=[]
ffi=["sync"]

[lib]
name = "libcw"
path="src/lib.rs"
crate-type = ["rlib","staticlib"]

[dependencies]
#cfg-if = "1.0.0"
#static_assertions = "1.1.0"
bytecount = "0.6.3"
enum-utils = "0.1.2"
tower-layer = "0.3.1"
anymap = "0.12.1"
tower = {version= "0.4.13", features=["full"]}

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[build-dependencies]
cbindgen = "0.24.3"

[dev-dependencies]
serde_json = "1.0.79"
rstest = "0.15"
speculoos = "0.9"

[dev-dependencies.criterion]
version = "0.3"
features = ["html_reports"]

[dev-dependencies.tokio]
version = "1.17.0"
features = ["io-util", "fs", "macros", "rt", "rt-multi-thread"]
 